--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravel/vapor-cli": "^1.60",
+        "laravel/vapor-core": "^2.32",
         "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
