--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,6 +28,8 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Run NPM Install
+      run: npm install
     - name: Generate Vite Manifest
       run: npm run dev
     - name: Execute tests (Unit and Feature tests) via PHPUnit
