--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,7 +29,7 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      run: vendor/bin/pest
 
 
   build:
@@ -47,7 +47,7 @@ jobs:
       - name: Install NPM dependencies
         run: npm install
       - name: Compile assets for production
-        run: npm run production
+        run: npm run build
 
   deploy:
     runs-on: ubuntu-latest
