--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -25,6 +25,10 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Setup Vite Manifest
+      run: |
+        npm install
+        npm run dev
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
