--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -48,10 +48,10 @@ jobs:
         with:
           node-version: '12'
           check-latest: true
-      - name: Install NPM dependencies
-        run: npm install
       - name: Compile assets for production
-        run: npm run build
+        run: |
+          npm install
+          npm run build
 
   deploy:
     runs-on: ubuntu-latest
