feat: implement sentry

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.9",
         "laravel/vapor-cli": "^1.63",
         "laravel/vapor-core": "^2.36",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "sentry/sentry-laravel": "*"
     },
     "require-dev": {
         "laravel/pint": "^1.16",
