--- a/vapor.yml
+++ b/vapor.yml
@@ -4,8 +4,8 @@ environments:
   production:
     memory: 1024
     cli-memory: 512
-    runtime: 'php-8.2:al2'
+    runtime: "php-8.2:al2"
     build:
-      - 'composer install --no-dev'
-      - 'php artisan event:cache'
-      - 'npm run build && rm -rf node_modules'
+      - "composer install --no-dev"
+      - "php artisan event:cache"
+      - "npm run build && rm -rf node_modules"
