--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "husky": "^9.0.11",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.31",
-        "prettier": "3.3.2",
         "tailwindcss": "^3.3.5",
         "vite": "^4.5.2",
-        "@sentry/browser": "^7.40.0"
+        "@sentry/browser": "^7.40.0",
+        "prettier": "3.3.2"
     },
     "dependencies": {
         "flowbite": "^2.2.0",
