--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=1.0
 VITE_SENTRY_DSN_PUBLIC="${SENTRY_LARAVEL_DSN}"
+
+YNAB_CLIENT_ID=
+YNAB_CLIENT_SECRET=
+YNAB_REDIRECT_URI=
