--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,6 @@ VITE_SENTRY_DSN_PUBLIC="${SENTRY_LARAVEL_DSN}"
 YNAB_CLIENT_ID=
 YNAB_CLIENT_SECRET=
 YNAB_REDIRECT_URI=
+
+GITHUB_LINK=
+ISSUES_LINK=
