--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "test": [
+            "@php artisan test --parallel"
         ]
     },
     "extra": {
