--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
         "prepare": "husky"
     },
     "devDependencies": {
+        "@sentry/browser": "^8.33.0",
         "autoprefixer": "^10.4.16",
         "axios": "^1.7.4",
-        "husky": "^9.0.11",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.31",
+        "prettier": "3.3.2",
         "tailwindcss": "^3.3.5",
-        "vite": "^4.5.5",
-        "@sentry/browser": "^8.33.0",
-        "prettier": "3.3.2"
+        "vite": "^4.5.5"
     },
     "dependencies": {
         "flowbite": "^2.2.0",
