Add `npm install` to laravel.yml

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,6 +30,8 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Install
+      run: npm install
     - name: Build
       run: npm run build
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
