--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "sentry/sentry-laravel": ">=4.9"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.2",
         "laravel/pint": "^1.18.1",
         "laravel/sail": "^1.37.1",
         "mockery/mockery": "^1.6.12",
