Install and use ynab-sdk-laravel

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="Repeating Export (For YNAB)"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://ynab-repeating-export.test
 
 APP_TIMEZONE=UTC
 APP_LOCALE=en
@@ -17,6 +17,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=sqlite
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
@@ -28,11 +29,11 @@ BROADCAST_CONNECTION=log
 CACHE_STORE=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
+# SESSION_ENCRYPT=false
+# SESSION_PATH=/
+# SESSION_DOMAIN=null
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -74,9 +75,8 @@ SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=1.0
 VITE_SENTRY_DSN_PUBLIC="${SENTRY_LARAVEL_DSN}"
 
-YNAB_CLIENT_ID=
-YNAB_CLIENT_SECRET=
-YNAB_REDIRECT_URI=
+YNAB_SDK_LARAVEL_CLIENT_ID=
+YNAB_SDK_LARAVEL_CLIENT_SECRET=
 
 GITHUB_LINK=
 ISSUES_LINK=
