Use YNAB_ACCESS_TOKEN_SERVICE_DRIVER

--- a/.env.example
+++ b/.env.example
@@ -81,3 +81,5 @@ YNAB_SDK_LARAVEL_CLIENT_SECRET=
 GITHUB_LINK=
 ISSUES_LINK=
 PRODUCTION_LINK=https://repeating-export-for-ynab.com
+
+YNAB_ACCESS_TOKEN_SERVICE_DRIVER=session
