--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="Repeating Export (For YNAB)"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://ynab-repeating-export.test
+APP_URL=https://repeating-export-for-ynab.test
 
 APP_TIMEZONE=UTC
 APP_LOCALE=en
