--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "laravel/vapor-core": "^2.37.8",
         "maatwebsite/excel": "^3.1.61",
         "sentry/sentry-laravel": ">=4.10.1",
-        "ynab-sdk-laravel/ynab-sdk-laravel": "dev-main"
+        "ynab-sdk-laravel/ynab-sdk-laravel": "^2.0.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.2.2",
@@ -79,6 +79,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
