--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,41 +1,40 @@
 name: Laravel
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    push:
+        branches: ["main"]
+    pull_request:
+        branches: ["main"]
 
 jobs:
-  laravel-tests:
+    laravel-tests:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: shivammathur/setup-php@main
-      with:
-        php-version: '8.2'
-    - uses: actions/checkout@v4
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Update Dependencies
-      run: composer update
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Install
-      run: npm install
-    - name: Build
-      run: npm run build
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan test
+        steps:
+            - uses: shivammathur/setup-php@main
+              with:
+                  php-version: "8.2"
+            - uses: actions/checkout@v4
+            - name: Copy .env
+              run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+            - name: Update Dependencies
+              run: composer update
+            - name: Install Dependencies
+              run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+            - name: Generate key
+              run: php artisan key:generate
+            - name: Directory Permissions
+              run: chmod -R 777 storage bootstrap/cache
+            - name: Create Database
+              run: |
+                  mkdir -p database
+                  touch database/database.sqlite
+            - name: Install
+              run: npm install
+            - name: Build
+              run: npm run build
+            - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
+              env:
+                  DB_CONNECTION: sqlite
+                  DB_DATABASE: database/database.sqlite
+              run: php artisan test
